[gd_scene load_steps=6 format=2]

[ext_resource path="res://animation.gd" type="Script" id=1]
[ext_resource path="res://resources/g2664-0.png" type="Texture" id=2]
[ext_resource path="res://resources/rect2358-0.png" type="Texture" id=3]
[ext_resource path="res://resources/g2673-4.png" type="Texture" id=4]
[ext_resource path="res://resources/g2304.png" type="Texture" id=5]

[node name="Background" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Clock" type="Node2D" parent="."]
position = Vector2( 500, 300 )

[node name="Body" type="Sprite" parent="Clock"]
texture = ExtResource( 5 )
script = ExtResource( 1 )

[node name="hour_hand" type="Position2D" parent="Clock/Body"]

[node name="Sprite" type="Sprite" parent="Clock/Body/hour_hand"]
position = Vector2( 0, -40 )
texture = ExtResource( 4 )

[node name="minute_hand" type="Position2D" parent="Clock/Body"]

[node name="Sprite" type="Sprite" parent="Clock/Body/minute_hand"]
position = Vector2( 0, -60 )
rotation = -0.000730358
texture = ExtResource( 2 )

[node name="second_hand" type="Position2D" parent="Clock/Body"]

[node name="Sprite" type="Sprite" parent="Clock/Body/second_hand"]
position = Vector2( 0, -80 )
texture = ExtResource( 3 )
